fake search implemented

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chroma-js": "^2.4.2",
+    "framer-motion": "^12.33.0",
     "graphology": "^0.26.0",
     "graphology-layout-force": "^0.2.4",
     "next": "16.1.6",
