--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "dev": "ts-node-dev --respawn server.ts"
+    "start": "node dist/index.js",
+    "dev": "ts-node index.ts",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -14,14 +16,20 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.2.1",
-    "ts-node-dev": "^2.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^25.2.2",
+    "@types/node-fetch": "^2.6.13",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@google/genai": "^1.40.0",
+    "@openrouter/sdk": "^0.8.0",
     "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "fuse.js": "^7.1.0",
+    "multer": "^2.0.2"
   }
 }
